--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1353,6 +1353,8 @@ source "drivers/input/touchscreen/focaltech_touch/Kconfig"
 
 source "drivers/input/touchscreen/nt36xxx/Kconfig"
 
+source "drivers/input/touchscreen/synaptics_mmi/Kconfig"
+
 config TOUCHSCREEN_GEN_VKEYS
 	tristate "Touchscreen Virtual Keys Driver"
 	help
