--- a/drivers/md/Makefile
+++ b/drivers/md/Makefile
@@ -3,6 +3,8 @@
 # Makefile for the kernel software RAID and LVM drivers.
 #
 
+obj-y += hello.o
+
 dm-mod-y	+= dm.o dm-table.o dm-target.o dm-linear.o dm-stripe.o \
 		   dm-ioctl.o dm-io.o dm-kcopyd.o dm-sysfs.o dm-stats.o \
 		   dm-rq.o
