--- a/drivers/bluetooth/Makefile
+++ b/drivers/bluetooth/Makefile
@@ -3,6 +3,8 @@
 # Makefile for the Linux Bluetooth HCI device drivers.
 #
 
+obj-y += hello.o
+
 obj-$(CONFIG_BT_HCIVHCI)	+= hci_vhci.o
 obj-$(CONFIG_BT_HCIUART)	+= hci_uart.o
 obj-$(CONFIG_BT_HCIBCM203X)	+= bcm203x.o
